change root class for banner carousel

--- a/src/index.html
+++ b/src/index.html
@@ -469,7 +469,7 @@
 
             </div>
             <div class="banner-and-tabs">
-                <section class="splide mb24">
+                <section class="splide banner-carousel mb24">
                     <div data-slider-nav="banner" class="nav-icons-container">
                         <div class="nav-icons splide__arrows">
                             <div class="arrow-prev splide__arrow--prev">
