--- a/src/index.html
+++ b/src/index.html
@@ -596,7 +596,7 @@
                 </div>
 
             </div>
-            <div class="tabs-block">
+            <div data-tab="items" class="tabs-block">
 
                 <div data-tab-type="new-items" class="tab tab-active">
                     Новинки
@@ -615,7 +615,7 @@
                 </div>
             </div>
 
-                <div data-tab-type="new-items" class="items-scroll-x tab-content">
+                <div data-tab="items" data-tab-type="new-items" class="items-scroll-x tab-content">
                     <section class="splide items-carousel" aria-label="Basic Structure Example">
                         <div class="splide__track">
                         <ul class="splide__list">
@@ -1071,7 +1071,7 @@
                     </div> -->
                 </div>
 
-                <div data-tab-type="popular-items" class="items-scroll-x tab-content">
+                <div data-tab="items" data-tab-type="popular-items" class="items-scroll-x tab-content">
                     <section class="splide items-carousel" aria-label="Basic Structure Example">
                         <div class="splide__track">
                         <ul class="splide__list">
@@ -1524,7 +1524,7 @@
                     </section>
                 </div>
 
-                <div data-tab-type="sale-items" class="items-scroll-x tab-content">
+                <div data-tab="items" data-tab-type="sale-items" class="items-scroll-x tab-content">
                     <section class="splide items-carousel" aria-label="Basic Structure Example">
                         <div class="splide__track">
                         <ul class="splide__list">
@@ -3295,7 +3295,7 @@
         <div class="popup-fade"></div>
         <div class="popup-body">
             <div class="popup-head no-p">
-                <div class="tabs-block no-mb">
+                <div data-tab="auth-popup" class="tabs-block no-mb">
                     <a class="popup-close a-blue-hover black-text">
                         <span class="icon-close"></span>
                     </a>
@@ -3315,7 +3315,7 @@
 
             <div class="popup-content">
 
-                <div data-tab-type="login" class="tab-content active">
+                <div data-tab="auth-popup" data-tab-type="login" class="tab-content active">
                     <div class="mb20" name="radiobtns">
                         <label class="radio-btn mr24">
                             <input data-radio-type='byPhone' class="radio-btn-input" name="loginType" value="phone"
@@ -3353,7 +3353,7 @@
                 </div>
 
 
-                <div data-tab-type="reg" class="tab-content">
+                <div data-tab="auth-popup" data-tab-type="reg" class="tab-content">
                     <form data-popup-form="t" class="registration-form">
                         <input class="form-field mb16 _req" type="text" placeholder="Телефон" name="phone">
                         <input class="form-field mb16 _req" type="text" placeholder="Пароль" name="pswrd">
