finished hits scroll

--- a/src/index.html
+++ b/src/index.html
@@ -2226,17 +2226,17 @@
                     <div class="h2-block">
                         <h2>Хиты продаж</h2>
                     </div>
-                    <div class="nav-icons no-mb">
-                        <div class="arrow-prev">
+                    <div data-arrows="hits" class="nav-icons no-mb">
+                        <div class="arrow-prev hits-prev">
                             <span class="icon-return"></span>
                         </div>
-                        <div class="arrow-fwd">
+                        <div class="arrow-fwd hits-fwd">
                             <span class="icon-return-copy"></span>
                         </div>
                     </div>
                 </div>
                 <div class="items-scroll-x">
-                    <section class="splide hits-carousel" aria-label="Basic Structure Example">
+                    <section class="splide hits-carousel" >
                         <div class="splide__track">
                             <ul class="splide__list">
                                 <li class="hits-item-col splide__slide">
@@ -2608,13 +2608,6 @@
                         </div>
 
                 </div> -->
-                <div class="pagination">
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
-                </div>
                 <a href="/" class="standart-btn white-text">
                     Все товары
                 </a>
