finished hits carousel for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -2613,11 +2613,11 @@
                     <div class="h2-block">
                         <h2>Хиты продаж</h2>
                     </div>
-                    <div class="nav-icons no-mb">
-                        <div class="arrow-prev">
+                    <div data-arrows="hits-mob" class="nav-icons no-mb">
+                        <div class="arrow-prev hits-prev-mob">
                             <span class="icon-return"></span>
                         </div>
-                        <div class="arrow-fwd">
+                        <div class="arrow-fwd hits-fwd-mob">
                             <span class="icon-return-copy"></span>
                         </div>
                     </div>
@@ -2779,13 +2779,6 @@
                           </ul>
                         </div>
                       </section>
-                </div>
-                <div class="pagination">
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
-                    <div class="pagination-item"></div>
                 </div>
                 <div class="txt-center">
                     <a href="/" class="standart-btn white-text">
