--- a/src/index.html
+++ b/src/index.html
@@ -3526,6 +3526,8 @@
     <script type="text/javascript" src="scripts/modules/city.js"></script>
     <script type="text/javascript" src="scripts/modules/tabs.js"></script>
     <script type="text/javascript" src="scripts/modules/forms.js"></script>
+    <script type="text/javascript" src="scripts/modules/card.js"></script>
+    
 
 
     <!-- <script src="scripts/vendor/owlcarousel/owl.carousel.min.js"></script> -->
