--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
                         <a href="/" class="head-nav-btn a-red-hover">
                             <div class="head-nav-icon-count">
                                 <span class="icon-heart icon-head-menu-nav"></span>
-                                <div class="count">1</div>
+                                <div data-count="fav" class="count"></div>
                             </div>
                             <p class="head-nav-btn-text">Отложенные</p>
                         </a>
